--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
   "autoload-dev": {
     "psr-4": {
       "Tests\\": "tests/"
-    }
+    },
+    "files": [
+      "app/helpers.php"
+    ]
   },
   "scripts": {
     "post-install-cmd": [
